# MouseAura

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  PHASE1_REPORT.md  README.md
.claude/: CLAUDE.md
.claude/日志/: prompt.md  running.md
include/: Config.h  DataStructures.h  MouseHighlighter.h  SharedState.h
res/: app.rc
src/: Config.cpp  MouseHighlighter.cpp  main.cpp
